# scraping-suedtirol-info

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
config/: config.toml  languages.py  settings.py
scraper/: live_extract.py  main.py  sitemap_extract.py  startup.py  utils.py
